Google integration base functions

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="col-lg-8 col-xl-4 mx-auto m-5 p-3  bg-secondary text-light border border-3 rounded-3 shadow-lg">
+<div>
+  <div class="col-lg-8 col-xl-4 mx-auto m-5 p-3 background text-light border border-3 rounded-3 shadow-lg">
     <h1 class="text-center">
       Please login to our fully credible banking software 
       <img alt="kappa" class="map img-responsive" width="50px" height="50px" src="https://i.kym-cdn.com/photos/images/newsfeed/000/925/494/218.png_large"/>
@@ -16,7 +17,11 @@
       <div class="mx-auto col-sm-8 col-lg-5 py-3">
         <button type="submit" class="col-12 btn btn-primary mb-3">Login</button>
         <label for="Google" class="ms-2 form-label">or you can use your google account!</label>
-        <button type="submit" class="col-12 btn btn-primary">Login with Google</button>
       </div>
     </form>
+    <div class="col-12">
+      <button (click)="SingIn()" type="submit" class="mx-auto col-3 btn btn-primary mb-3">Google Login</button>
+    </div>
+    Login with Google
+  </div>
 </div>
