--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,25 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-brown box-shadow">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="">Emu Credit Bank</a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="">Home</a>
+        </li>
+        <li *ngIf="!authService.IsAuthenticated()" class="nav-item">
+          <a class="nav-link" aria-current="page" href="login">Internet Bonk Belépés</a>
+        </li>
+        <li *ngIf="authService.IsAuthenticated()" class="nav-item">
+          <a class="nav-link" aria-current="page" href="overview">Internet Bonk</a>
+        </li>
+      </ul>
+      <div *ngIf="authService.IsAuthenticated()" class="d-flex navbar-nav">
+        <div class="nav-item">
+           <a class="nav-link" (click)="authService.SingOut()" href="#">SingOut</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+
 <router-outlet></router-outlet>
