--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,3 +4,7 @@ body {
   background-size: cover;
   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfWf4G28xPRWwt8gtSQrag6d1OlUhWCmmUx9TE6F827VZebSvnlshWRoswANzaDAIJWfQ&usqp=CAU");
 }
+.bg-brown {
+  color: white;
+  background-color: brown;
+}
