--- a/frontend/src/app/overview/overview.component.html
+++ b/frontend/src/app/overview/overview.component.html
@@ -5,6 +5,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="connection">Connections</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="costs">Costs</a>
+        </li>
       </ul>
     </div>
   </div>
