--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,7 +2,7 @@ body {
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfWf4G28xPRWwt8gtSQrag6d1OlUhWCmmUx9TE6F827VZebSvnlshWRoswANzaDAIJWfQ&usqp=CAU");
+  background-image: url("https://i.imgflip.com/5in491.png");
 }
 .bg-brown {
   color: white;
