--- a/frontend/src/app/costs/costs.component.html
+++ b/frontend/src/app/costs/costs.component.html
@@ -2,7 +2,12 @@
 <form class="px-4 col-lg-8 mx-auto bg-brown">
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Costs By</label>
-    <input type="text" class="form-control">
+    <div class="row">
+      <div *ngFor="let user of FriendListPlusYou" class="col-4">
+        <label>{{user.username}}</label>
+        <input  type="checkbox" class="form-check-input" (change)="OnCheckboxChange($event, user)">
+      </div>
+    </div>
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Cost</label>
@@ -15,6 +20,6 @@
     </select>
   </div>
   <div class="mx-auto col-sm-8 col-lg-5 py-3">
-    <button type="submit" class="col-12 btn btn-primary mb-3">Login</button>
+    <button type="submit" class="col-12 btn btn-primary mb-3">Create Cost</button>
   </div>
 </form>
