--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -15,8 +15,7 @@
         <input type="password" class="form-control" id="exampleInputPassword1">
       </div>
       <div class="mx-auto col-sm-8 col-lg-5 py-3">
-        <button type="submit" class="col-12 btn btn-primary mb-3" (click)="SingIn()">Login</button>
-        <button type="submit" class="col-12 btn btn-primary mb-3" (click)="router.navigate(['/register'])">Register</button>
+        <button type="submit" class="col-12 btn btn-primary mb-3" (click)="Register()">Register</button>
       </div>
     </form>
   </div>
