--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -4,19 +4,21 @@
       Please login to our fully credible banking software 
       <img alt="kappa" class="map img-responsive" width="50px" height="50px" src="https://i.kym-cdn.com/photos/images/newsfeed/000/925/494/218.png_large"/>
     </h1>
-    <form class="px-4">
+    <form [formGroup]="LoginForm"class="px-4">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your dumb ass email with anyone else, other than the companies who pay for it more than 10 cents.</div>
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1">
+        <div id="emailHelp" class="form-text">Felling lucky punk?</div>
       </div>
       <div class="mx-auto col-sm-8 col-lg-5 py-3">
         <button type="submit" class="col-12 btn btn-primary mb-3" (click)="SingIn()">Login</button>
         <button type="submit" class="col-12 btn btn-primary mb-3" (click)="router.navigate(['/register'])">Register</button>
+        <button *ngIf="!GoogleShown" type="submit" class="col-12 btn btn-primary mb-3" (click)="ResetGoogleLogin()">Google Login</button>
       </div>
     </form>
   </div>
