--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -3,6 +3,7 @@ body {
   background-position: top;
   background-size: cover;
   background-image: url("https://i.imgflip.com/5in491.png");
+  background-attachment: fixed;
 }
 .bg-brown {
   color: white;
