--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,7 +7,7 @@
           <a class="nav-link" aria-current="page" href="">Home</a>
         </li>
         <li *ngIf="!authService.IsAuthenticated()" class="nav-item">
-          <a class="nav-link" aria-current="page" href="login">Internet Bonk Belépés</a>
+          <a class="nav-link" aria-current="page" href="login">Internet Bonk Login</a>
         </li>
         <li *ngIf="authService.IsAuthenticated()" class="nav-item">
           <a class="nav-link" aria-current="page" href="overview">Internet Bonk</a>
