--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-brown box-shadow">
+<nav class="navbar navbar-dark bg-brown box-shadow col-xs-12">
   <div class="container-fluid">
     <a class="navbar-brand" href="">Emu Credit Bank</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
