last change in homepage view

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -30,7 +30,7 @@
       Our revolutionary new technologies, such as abusing the free trial in google cloud, makes sure you can always access your banking account.
       Your data will never be lost. Google data enginering specialists make sure it has multiple backups of it to sell to advertisers.
     </p>
-    <img class="pt-5 col-lg-6 col-xs-12" src="https://i.imgflip.com/6fg8xa.jpg">
+    <img class="pt-5 col-lg-6 col-12" src="https://i.imgflip.com/6fg8xa.jpg">
   </div>
 
   <div class="text-snippet my-2">
@@ -39,7 +39,7 @@
       In our scam, our biggest priority is to not sell currencies. Sadly feds can track that shit down really fast.
       We use currencyless transactions where you transfer debt to each other. 
     </p>
-    <img  class="pt-5 col-lg-6 col-xs-12" src="https://i.imgflip.com/6fg9gg.jpg">
+    <img  class="pt-5 col-lg-6 col-12" src="https://i.imgflip.com/6fg9gg.jpg">
   </div>
 </div>
 
